Add docs, helmet, structure

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^16.13.1",
     "react-basic-blocks": "^0.0.3",
     "react-dom": "^16.13.1",
+    "react-helmet": "^6.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-snap": "^1.23.0",
@@ -48,6 +49,7 @@
     "@types/node": "13.13.5",
     "@types/react": "16.9.35",
     "@types/react-dom": "16.9.8",
+    "@types/react-helmet": "^6.0.0",
     "@types/react-router-dom": "^4.3.4",
     "@types/styled-components": "^5.1.0",
     "@typescript-eslint/eslint-plugin": "^2.32.0",
