--- a/package.json
+++ b/package.json
@@ -14,13 +14,11 @@
     "test-coverage": "npm test -- --coverage",
     "view-coverage": "open coverage/index.html",
     "postbuild": "react-snap",
-    "cy:open": "npx cypress open --env type=actual --config baseUrl=${CYPRESS_BASE_URL}",
     "cy:base": "npx cypress run --env type=base --config screenshotsFolder=cypress/snapshots/base,baseUrl=${CYPRESS_BASE_URL}",
     "cy:test": "npm run clean-reports; npx cypress run --env type=actual --config baseUrl=${CYPRESS_BASE_URL}",
     "clean-reports": "rm -rf cypress/reports",
-    "merge-report": "npx mochawesome-merge \"cypress/reports/tests/*.json\" --output cypress/reports/report.json",
-    "generate-report": "npx marge --reportDir cypress/reports/html cypress/reports/report.json",
-    "cy:report": "npm run merge-report; npm run generate-report"
+    "cy:merge": "junit-merge -d \"cypress/reports/tests\" --out cypress/reports/merged.xml",
+    "cy:open": "xunit-viewer -r cypress/reports/merged.xml -o cypress/reports/merged.html && open cypress/reports/merged.html"
   },
   "dependencies": {
     "@hookform/error-message": "^0.0.3",
@@ -70,6 +68,7 @@
     "@typescript-eslint/parser": "^2.32.0",
     "cypress": "^4.12.0",
     "cypress-iframe": "^1.0.1",
+    "cypress-junit-reporter": "^1.3.1",
     "cypress-keycloak-commands": "^1.2.0",
     "cypress-visual-regression": "^1.4.0",
     "cypress-wait-until": "^1.7.1",
@@ -78,10 +77,9 @@
     "eslint-config-react-app": "^5.2.1",
     "eslint-plugin-react-hooks": "^4.0.0",
     "husky": "^4.2.5",
-    "mochawesome": "^6.1.1",
-    "mochawesome-merge": "^4.1.0",
-    "mochawesome-report-generator": "^5.1.0",
-    "prettier": "^2.0.5"
+    "junit-merge": "^2.0.0",
+    "prettier": "^2.0.5",
+    "xunit-viewer": "^6.3.9"
   },
   "jest": {
     "coverageReporters": [
