--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -5,8 +5,20 @@ variables:
     value: prod-env-name
   - name: DEV_URL
     value: https://appname.cluster1.endvr-digital-dev.com
+  - name: DEV_KEYCLOAK_URL
+    value: https://keycloak.cluster1.endvr-digital-dev.com/auth
+  - name: DEV_KEYCLOAK_REALM
+    value: devkcrealm
+  - name: DEV_KEYCLOAK_CLIENT_ID
+    value: dev-kc-client-id
   - name: PROD_URL
     value: https://someurl.com
+  - name: PROD_KEYCLOAK_URL
+    value: https://somekeycloakurl.com/auth
+  - name: DEV_KEYCLOAK_REALM
+    value: prodrealm
+  - name: DEV_KEYCLOAK_CLIENT_ID
+    value: prod-kc-client-id
   - name: DEV_S3_BUCKET_NAME
     value: dev-bucket-name
   - name: PROD_S3_BUCKET_NAME
@@ -43,7 +55,11 @@ stages:
                   exit 1
               fi
             displayName: 'yarn install'          
-          - script: |   
+          - script: |
+              export REACT_APP_API_URL=$(DEV_URL)/api/todo/v1
+              export REACT_APP_KEYCLOAK_URL=$(DEV_KEYCLOAK_URL)
+              export REACT_APP_KEYCLOAK_REALM=$(DEV_KEYCLOAK_REALM)
+              export REACT_APP_KEYCLOAK_CLIENT_ID=$(DEV_KEYCLOAK_CLIENT_ID)
               yarn build-dev
               if [ $? -ne 0 ]; then
                   exit 1
@@ -125,7 +141,11 @@ stages:
                   exit 1
               fi
             displayName: 'yarn install'          
-          - script: |   
+          - script: |
+              export REACT_APP_API_URL=$(PROD_URL)/api/todo/v1
+              export REACT_APP_KEYCLOAK_URL=$(PROD_KEYCLOAK_URL)
+              export REACT_APP_KEYCLOAK_REALM=$(PROD_KEYCLOAK_REALM)
+              export REACT_APP_KEYCLOAK_CLIENT_ID=$(PROD_KEYCLOAK_CLIENT_ID)
               yarn build
               if [ $? -ne 0 ]; then
                   exit 1
