--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,8 +1,7 @@
 variables: 
+  # DEV
   - name: DEV_ENV_NAME
     value: dev-env-name
-  - name: PROD_ENV_NAME
-    value: prod-env-name
   - name: DEV_URL
     value: https://appname.cluster1.endvr-digital-dev.com
   - name: DEV_KEYCLOAK_URL
@@ -11,6 +10,11 @@ variables:
     value: devkcrealm
   - name: DEV_KEYCLOAK_CLIENT_ID
     value: dev-kc-client-id
+  - name: DEV_S3_BUCKET_NAME
+    value: dev-bucket-name
+  # PROD
+  - name: PROD_ENV_NAME
+    value: prod-env-name
   - name: PROD_URL
     value: https://someurl.com
   - name: PROD_KEYCLOAK_URL
@@ -19,8 +23,6 @@ variables:
     value: prodrealm
   - name: PROD_KEYCLOAK_CLIENT_ID
     value: prod-kc-client-id
-  - name: DEV_S3_BUCKET_NAME
-    value: dev-bucket-name
   - name: PROD_S3_BUCKET_NAME
     value: prod-bucket-name
 
