Add landing page, Add cognito

--- a/.env
+++ b/.env
@@ -1,5 +1,4 @@
-REACT_APP_AUTH_URL=http://mvp-app.cluster1.endvr-digital-dev.co/api/todo/v1
-REACT_APP_API_URL=http://localhost:3080/api/todo/v1
-REACT_APP_KEYCLOAK_REALM=mvpapp
-REACT_APP_KEYCLOAK_URL=https://keycloak.cluster1.endvr-digital-dev.com/auth
-REACT_APP_KEYCLOAK_CLIENT_ID=test-client
+REACT_APP_API_URL=https://mvp-app.cluster1.endvr-digital-dev.com/api/todo/v1
+REACT_APP_COGNITO_REGION=us-west-2
+REACT_APP_COGNITO_POOL_ID=us-west-2_KW1PfhGRt
+REACT_APP_COGNITO_CLIENT_ID=3cfglgilbik85k6rimev9ajn8l
