--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -4,27 +4,27 @@ variables:
     value: dev-env-name
   - name: DEV_URL
     value: https://appname.cluster1.endvr-digital-dev.com
-  - name: DEV_KEYCLOAK_URL
-    value: https://keycloak.cluster1.endvr-digital-dev.com/auth
-  - name: DEV_KEYCLOAK_REALM
-    value: devkcrealm
-  - name: DEV_KEYCLOAK_CLIENT_ID
-    value: dev-kc-client-id
   - name: DEV_S3_BUCKET_NAME
     value: dev-bucket-name
+  - name: DEV_COGNITO_REGION
+    value: dev-cognito-region
+  - name: DEV_COGNITO_POOL_ID
+    value: dev-cognito-pool-id
+  - name: DEV_COGNITO_CLIENT_ID
+    value: dev-cognito-client-id
   # PROD
   - name: PROD_ENV_NAME
     value: prod-env-name
   - name: PROD_URL
     value: https://someurl.com
-  - name: PROD_KEYCLOAK_URL
-    value: https://somekeycloakurl.com/auth
-  - name: PROD_KEYCLOAK_REALM
-    value: prodrealm
-  - name: PROD_KEYCLOAK_CLIENT_ID
-    value: prod-kc-client-id
   - name: PROD_S3_BUCKET_NAME
     value: prod-bucket-name
+  - name: PROD_COGNITO_REGION
+    value: prod-cognito-region
+  - name: PROD_COGNITO_POOL_ID
+    value: dev-cognito-pool-id
+  - name: PROD_COGNITO_CLIENT_ID
+    value: prod-cognito-client-id
 
 
 trigger:
@@ -59,9 +59,9 @@ stages:
             displayName: 'yarn install'          
           - script: |
               export REACT_APP_API_URL=$(DEV_URL)/api/todo/v1
-              export REACT_APP_KEYCLOAK_URL=$(DEV_KEYCLOAK_URL)
-              export REACT_APP_KEYCLOAK_REALM=$(DEV_KEYCLOAK_REALM)
-              export REACT_APP_KEYCLOAK_CLIENT_ID=$(DEV_KEYCLOAK_CLIENT_ID)
+              export REACT_APP_COGNITO_REGION=$(DEV_COGNITO_REGION)
+              export REACT_APP_COGNITO_POOL_ID=$(DEV_COGNITO_POOL_ID)
+              export REACT_APP_COGNITO_CLIENT_ID=$(DEV_COGNITO_CLIENT_ID)
               yarn build-dev
               if [ $? -ne 0 ]; then
                   exit 1
@@ -145,9 +145,9 @@ stages:
             displayName: 'yarn install'          
           - script: |
               export REACT_APP_API_URL=$(PROD_URL)/api/todo/v1
-              export REACT_APP_KEYCLOAK_URL=$(PROD_KEYCLOAK_URL)
-              export REACT_APP_KEYCLOAK_REALM=$(PROD_KEYCLOAK_REALM)
-              export REACT_APP_KEYCLOAK_CLIENT_ID=$(PROD_KEYCLOAK_CLIENT_ID)
+              export REACT_APP_COGNITO_REGION=$(PROD_COGNITO_REGION)
+              export REACT_APP_COGNITO_POOL_ID=$(PROD_COGNITO_POOL_ID)
+              export REACT_APP_COGNITO_CLIENT_ID=$(PROD_COGNITO_CLIENT_ID)
               yarn build
               if [ $? -ne 0 ]; then
                   exit 1
